--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ function displayEx(data) {
     if (i > 0) {
       ranked[i] = ranked[i - 1];
       ranked[i - 1] = data.imdbID;
-      put('/movies', {'movies': JSON.stringify(ranked)});
+      put('/movies', {'movies': JSON.stringify(ranked)}, function() { setTimeout(updateRankings, 500); });
     }
   });
 
@@ -102,7 +102,7 @@ function displayEx(data) {
     if (i < ranked.length - 1) {
       ranked[i] = ranked[i + 1];
       ranked[i + 1] = data.imdbID;
-      put('/movies', {'movies': JSON.stringify(ranked)});
+      put('/movies', {'movies': JSON.stringify(ranked)}, function() { setTimeout(updateRankings, 500); });
     }
   });
 
@@ -110,6 +110,7 @@ function displayEx(data) {
   movieTitle.appendChild(movieLink);
   movieLink.href = 'http://www.imdb.com/title/' + data.imdbID + '/';
   movieLink.textContent = data.Title + ' (' + data.Year + ')';
+  movieLink.target = '_blank';
 
   var td = document.createElement('td');
   movieRow.appendChild(td);
@@ -141,4 +142,31 @@ json('/movies', function(data) {
   for (var i = 0; i < data.all.length; i++)
     json('/movie?imdb_id=' + encodeURIComponent(data.all[i]), displayEx);
 });
+
+var h3 = document.createElement('h3');
+
+h3.textContent = 'Overall rankings:';
+container.appendChild(h3);
+
+var overallList = document.createElement('ol');
+container.appendChild(overallList);
+
+function updateRankings() {
+  json('/rankings', function(data) {
+    overallList.textContent = '';
+
+    for (var i = 0; i < data.length; i++) {
+      var movie = data[i];
+      var li = document.createElement('li');
+      var a = document.createElement('a');
+
+      overallList.appendChild(li);
+      li.appendChild(a);
+      a.href = 'http://www.imdb.com/title/' + movie.imdbID + '/';
+      a.textContent = movie.Title + ' (' + movie.Year + ')';
+      a.target = '_blank';
+    }
+  });
+}
+updateRankings();
 </script>
